# multi-agent-stochastic-games

./: .env.secrets  .envrc  .gitignore  Makefile  main.py  pyproject.toml  setup.sh
configs/: default_experiment.json  stage1_baseline.json  stage2_robert_efficient.json  stage2_sarah_safe.json  stage2_stress_test.json
notebooks/: FIT5226_34169202_2026S1_Ass1.ipynb
qlearning/: __init__.py
qlearning/agents/: tabular_qagent.py
qlearning/core/: actions.py  agent.py  environment.py  reward.py  state.py
qlearning/domain/gridworld/: base.py  stochastic.py  transport.py
qlearning/domain/rewards/: coordination.py  factory.py  transport.py
qlearning/orchestration/: runner.py
src/: __init__.py
src/agents/: tabular_qagent.py
src/core/: actions.py  config.py  environment.py  state.py
src/domain/gridworld/: stochastic.py  transport.py
src/orchestration/: runner.py
src/utils/: logger.py  visualisation.py
tests/: conftest.py  evaluation.py
tests/functional/: test_evaluation.py  test_stage1_baseline.py  test_stage2_dynamics.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_coordinates.py  test_gridworld.py  test_qagent.py
