[project]
name = "qlearning"
version = "0.1.0"
description = "A professional Q-Learning transport agent implementation"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
